--- a/poster_Okinawa.tex
+++ b/poster_Okinawa.tex
@@ -23,6 +23,7 @@
 \hypersetup{%
 	pdftitle={Wrinkling and nested buckling in a confined protein gel},%the title
 	pdfauthor={Mathieu Leocmach},%your name
+	hidelinks=true,
 }
 
 %proper math and math symbols
@@ -177,7 +178,7 @@ Wrinkling of a confined porous layer
 	\end{groupplot}
 	\end{tikzpicture}
 	
-For confocal microscopy we label 10\% of the casein.
+\Subhead{Confocal microscopy}\\ 10\% labelled casein
 \end{textblock}
 
 \begin{textblock}{7}(4,2.5)
@@ -219,7 +220,7 @@ For confocal microscopy we label 10\% of the casein.
 
 \end{textblock}
 
-\begin{textblock}{15}(0,8)
+\begin{textblock}{11}(0,8)
 	\Head{Initial flat contact with a substrate: Poroelastic blistering}
 	
 \end{textblock}
@@ -258,40 +259,42 @@ For confocal microscopy we label 10\% of the casein.
 			},
 		xmin=0, xmax=170, xtick={0,30,...,150},
 		extra tick style={grid=major},%
-		extra x tick labels={},%
+		extra x ticks = {21,68}, extra x tick labels={},%
 		scale only axis,
 		width=\textwidth-4em,
 		height=0.3\textwidth,
 		ylabel absolute, every axis y label/.append style={anchor=base, yshift=1.25em}
 		]
 	
-	\nextgroupplot[ylabel={Volume (\%)}, ymin=20, ymax=100, ytick={40,60,80,100}, every axis y label/.append style={xshift=0.5em}]
+	\nextgroupplot[
+		ylabel={Volume (\%)}, ymin=20, ymax=100, 
+		ytick={40,60,80,100}, every axis y label/.append style={xshift=0.5em},
+		]
 	\addplot+[no marks,Accent1] table[x expr={\thisrowno{0}+15}, y expr={\thisrowno{1}*100}]{relative_volume_excess_area_cloques.txt};
 	%\addplot+[only marks,Accent2, mark=+] table[y expr={\thisrowno{1}*100}]{volume_rel_half_cas8_toi.txt};
+	\node[anchor=south west] at (rel axis cs:0,0) {\rotatebox{90}{synæresis}};
+	\node at (axis cs:68,80) {swelling};
 	
 	\nextgroupplot[
 		ylabel={Excess area (\%)}, ymin=0, ymax=4, ytick={0,1,2,3},
 		xlabel={time (min)}, 
 		every axis y label/.append style={xshift=-1em},
-%		legend style={legend pos=north west} 
 		]
 	\addplot+[no marks,Accent1] table[x expr={\thisrowno{0}+15}, y expr={\thisrowno{2}*100}]{relative_volume_excess_area_cloques.txt} node[pos=1, below left] {all};
 	\addplot+[no marks,Accent2] table[x expr={\thisrowno{0}+15}, y expr={\thisrowno{3}*100}]{relative_volume_excess_area_cloques.txt} node[pos=1, left] {single blister};
+	\draw[->] (axis cs: 21, 3) -- (axis cs: 68, 3) node[midway, below] {\SI{1}{\hour}};
 	%\legend{all, single blister};
 	\end{groupplot}
 	\end{tikzpicture}
 	
-\end{textblock}
-
-\begin{textblock}{3}(4,8.5)
-
-\begin{tikzpicture}
+	\begin{tikzpicture}
 \begin{axis}[
 	scale only axis,
 	width=\textwidth-4em,
 	height=0.3\textwidth,
 	xmin=0, xmax=1000, xtick={0,250, 500, 750}, xlabel={position (\si{\micro\metre})},
 	ymin=0, ymax=50, ylabel={altitude (\si{\micro\metre})},
+	ylabel absolute, every axis y label/.append style={anchor=base, yshift=1.25em},
 	cycle list={
 		{Accent2}, 
 		{black!15!Accent2},
@@ -309,9 +312,13 @@ For confocal microscopy we label 10\% of the casein.
 	\draw[ultra thick, Accent1] (axis cs:580,0) -- (axis cs:580,50);
 \end{axis}
 \end{tikzpicture}
+	
+\end{textblock}
+
+\begin{textblock}{3}(4,8.5)
 \includegraphics[width=\textwidth]{volume_cloque_t116.jpg}
 
-%\Subhead{Phenomenology}
+\Subhead{Phenomenology}
 \begin{itemize}
 \item Synæresis then swelling
 \item First blister after $\approx\SI{1}{\hour}$ of swelling
@@ -321,9 +328,7 @@ For confocal microscopy we label 10\% of the casein.
 \item Cascade buckling\linebreak \hfill\textit{Roman \& Pocheau 1999}
 \item Independent of gravity
 \end{itemize}
-\end{textblock}
 
-\begin{textblock}{3}(8,8.5)
 \begin{tikzpicture}[ultra thick]
 \begin{axis}[
 	name=a,
@@ -347,15 +352,90 @@ For confocal microscopy we label 10\% of the casein.
 Bending energy $B$ vs vertical stress $\sigma$:
 \[ \lambda^* = \left(\frac{B}{\sigma}\right)^{1/3}\text{, eg. }\sigma =\rho g h \]
 
-Actual shape depends on relative excess length $\epsilon$: $\lambda \sim \epsilon^{1/7} \lambda^*$ and $A \sim \epsilon^{4/7} \lambda^*$
-
-\Subhead{Poroelasticity}\\
-Here $\sigma$ is a Darcy pressure due to solvent flow through the gel (pore size $\ell_p \approx \SI{4}{\micro\metre}$)
-\[\sigma = \Delta P \sim \eta h v/\ell_p^2   \]
+%Actual shape depends on relative excess length $\epsilon$: $\lambda \sim \epsilon^{1/7} \lambda^*$ and $A \sim \epsilon^{4/7} \lambda^*$
 \end{textblock}
 
+\begin{textblock}{3}(8,8.5)
+\Subhead{Poroelasticity}\\
+Usual view (\textit{Biot 1964}): pore pressure\linebreak increases transiently the bending energy.
+\begin{itemize}
+\item Solvent must flow through the gel
+\begin{itemize}
+	\item Volumic flux $v\simeq \SI{0.2}{\micro\metre\per\second}$
+	\item Pore size $\ell_p \approx \SI{4}{\micro\metre}$
+\end{itemize}
+\item $\sigma$ is a Darcy pressure
+\[\sigma = \Delta P \sim \eta h v/\ell_p^2   \]
+\item Poroelastic length
+\[\lambda^* \sim \left(\frac{B \ell_p^2}{\eta v h}\right)^\frac{1}{3} \simeq \SI{2}{\milli\metre}\]
+\end{itemize}
+\Subhead{Wet paper ?}
 
-\begin{textblock}{15}(0,14)
+\smallskip
+\includegraphics[width=\textwidth]{large1}
+\end{textblock}
+
+\begin{textblock}{3}(12,8)
+	\Head{Cell thickness}
+\begin{tikzpicture}
+	\matrix[matrix of nodes, inner sep=0, column sep=0.02\columnwidth, row sep=0.02\columnwidth] (m) {
+		\includegraphics[width=0.49\columnwidth]{pattern_50um.jpg}&
+		\includegraphics[width=0.49\columnwidth]{pattern_100um.jpg}\\
+		\includegraphics[width=0.49\columnwidth]{pattern_250um.jpg}&
+		\includegraphics[width=0.49\columnwidth]{pattern_450um.jpg}\\
+	};
+	\node[inner sep=0, below=0.02\columnwidth of m.south] (x800) {\includegraphics[width=0.98\columnwidth]{pattern_800um_x1.jpg}};
+	\draw[ultra thick, Accent2, <->] (x800.south west) ++(0.25\columnwidth, 0.02\columnwidth) -- ++(45:0.29\columnwidth) node[midway,above]{$\lambda$};
+	\draw[line width=0.2em,Main](x800.north east) -- ++(-0.434\columnwidth,0) node[midway,below] {\SI{5}{\milli\metre}};
+	
+	\begin{axis}[%
+		name=g,
+		anchor=left of north west,
+		at={($(x800.south west)+(-0.01\columnwidth,-0.01\columnwidth)$)},
+		scale only axis,
+		width=\textwidth-3.25em,
+		height=0.3\textwidth,
+		xmin=0,xmax=1,xlabel={gap (\si{\milli\metre})},
+		xtick={0,0.4,...,0.9},
+		ymin=0,ylabel={$\lambda$ (\si{\milli\metre})},
+		%label shift=-0.5em,
+		cycle multi list={%
+			Accent1,no marks\\%
+			Accent1,only marks,every mark/.append style={fill=Accent1},mark=*\\%
+			Accent1,only marks,every mark/.append style={fill=white},mark=*\\%
+			Accent1,only marks,every mark/.append style={fill=Accent1},mark=triangle*\\%
+			Accent1,only marks,every mark/.append style={fill=white},mark=triangle*\\%
+			Accent1,only marks,every mark/.append style={fill=Accent1},mark=square*\\%
+			Accent1,only marks,every mark/.append style={fill=white},mark=square*\\%
+		},
+		mark size={0.3em},
+		]
+		\addplot+[domain=0:3] {4.23*x};
+		\addplot coordinates {(0.05,0.261)};\label{pgfplots:50}
+		\addplot coordinates {(0.1,0.458)};\label{pgfplots:100}
+		\addplot coordinates {(0.250,0.916)};\label{pgfplots:250}
+		\addplot coordinates {(0.450,2.075)};\label{pgfplots:450}
+		\addplot coordinates {(0.800,3.333)};\label{pgfplots:800}
+		%\addplot+[only marks,Accent1, mark options={fill=Accent1}] coordinates {(0.05,0.261) (0.1,0.458) (0.250,0.916) (0.450,2.075) (0.800,3.333)};
+	\end{axis}
+	\begin{scope}[mark size={0.3em}]
+	\node[below right=0 of m-1-1.north west] {\ref{pgfplots:50}};
+	\node[below right=0 of m-1-2.north west] {\ref{pgfplots:100}};
+	\node[below right=0 of m-2-1.north west] {\ref{pgfplots:250}};
+	\node[below right=0 of m-2-2.north west] {\ref{pgfplots:450}};
+	\node[below right=0 of x800.north west] {\ref{pgfplots:800}};
+	\end{scope}
+	\end{tikzpicture}
+	Shape of a ruck depends on relative excess length $\epsilon$: $\lambda \sim \epsilon^{1/7} \lambda^*$ and $A \sim \epsilon^{4/7} \lambda^*$.
+	
+	At contact: $A=H\equiv e-h\approx e/2$
+	
+	\[ \lambda \sim \epsilon^{-3/7} H \]
+	%\[ \epsilon \sim \left(\frac{\lambda}{e}\frac{e}{H}\right)^{-7/3} \simeq \sqrt{1.6\%} \]
+	
+\end{textblock}
+
+\begin{textblock}{15}(0,16)
 	\Head{No initial contact with a substrate: Poiseuille vs Darcy on a flying carpet}
 	\begin{tikzpicture}
 	\matrix[matrix of nodes, inner sep=0, column sep=0.015\textwidth, row sep=0.5em] (m){
@@ -381,7 +461,7 @@ Here $\sigma$ is a Darcy pressure due to solvent flow through the gel (pore size
 \end{textblock}
 
 
-\begin{textblock}{3}(0,17)
+\begin{textblock}{3}(0,19)
 	\begin{tikzpicture}
 	\matrix[matrix of nodes, matrix anchor=north east, inner sep=0, row sep=0.01\textwidth]  (m){
 	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t000.png}\\
@@ -439,7 +519,7 @@ Here $\sigma$ is a Darcy pressure due to solvent flow through the gel (pore size
 \end{textblock}
 
 
-\begin{textblock}{7}(4,17)
+\begin{textblock}{7}(4,19)
 \begin{tikzpicture}
 \begin{axis}[
 	name=a,
@@ -458,22 +538,54 @@ Here $\sigma$ is a Darcy pressure due to solvent flow through the gel (pore size
 	\node[above] at (axis cs:90,1.5) (ph2) {$P_2$};
 	\node[above] at (axis cs:270,1.5) (ph1) {$P_1$};
 	\node[below] at (axis cs:270,-1.5) (pb2) {$P_2$};
-	\draw[thick, ->] (ph2) -- (axis cs:90,0.5) node[midway, left] {Darcy} node[midway, right] {$v$};
-	\draw[thick, ->] (pb2) -- (pb1) node[midway, above] {Poiseuille} node[midway, below] {$u \sim \frac{\lambda}{H} v$};
+	\draw[line width=0.1em, ->] (ph2) -- (axis cs:90,0.5) node[midway, left] {Darcy} node[midway, right] {$v$};
+	\draw[line width=0.1em, ->] (pb2) -- (pb1) node[midway, above] {Poiseuille} node[midway, below] {$u \sim \frac{\lambda}{H} v$};
 \end{axis}
 \fill[pattern=north east lines,pattern color=Accent2] (a.south west) rectangle +(\textwidth,-1em) (a.north west) rectangle +(\textwidth,1em);
 \end{tikzpicture}
+\end{textblock}
 
+\begin{textblock}{3}(4,21.5)
+\Subhead{Phenomenology}
 \begin{itemize}
-\item The same $\Delta P$ can be relaxed by a Poiseuille flow
+\item Global destabilisation
+\item Labyrinth pattern
+\item First wrinkle after $\approx\SI{13}{\minute}$ of swelling
+\item Next generations = blisters
+\end{itemize}
+\end{textblock}
+
+\begin{textblock}{3}(8,21.5)
+\begin{itemize}
+\item The same $\Delta P$ can be relaxed by\linebreak a Poiseuille flow
 \[\Delta P \sim 12\eta\frac{\lambda}{H^2} u \sim 12\eta\frac{\lambda^2}{H^3} v\]
 \item For the same wavelength
 \[\frac{v_\text{Darcy}}{v_\text{Poiseuille}} \sim \frac{\ell_p^2\lambda^2}{hH^3} \approx 30\]
 \end{itemize}
+Flow through the pores dominate
 
 \end{textblock}
 
+\begin{textblock}{3}(12,19)
+\Head{Viscosity}
+\begin{tikzpicture}
+	\begin{loglogaxis}[%
+		scale only axis,
+		width=\textwidth-3.25em,
+		height=0.4\textwidth,
+		xmin=0.6,xmax=11,xlabel={viscosity (\si{\milli\pascal\second})},
+		xtick={0.7, 1, 2, 5, 10}, xticklabels={$0.7$, $1$, $2$, $5$, $10$},
+		ytick={1,2,3,4}, yticklabels={$1$,$2$,$3$,$4$},
+		ymin=1, ymax=5, ylabel={$\lambda$ (\si{\milli\metre})},
+		mark size={0.3em},
+		]
+		\addplot+[only marks,Accent1, mark options={fill=Accent1}] table{eta_lambda_eau_pure.txt};
+		\addplot+[only marks,Accent2, mark options={fill=Accent2}] table{eta_lambda_eau_glycerol.txt};
+		%\addplot+[only marks,Accent1, mark options={fill=Accent1}] coordinates {(0.05,0.261) (0.1,0.458) (0.250,0.916) (0.450,2.075) (0.800,3.333)};
+	\end{loglogaxis}
+\end{tikzpicture}
 
+\end{textblock}
 
 \begin{textblock}{15}(0,25)
 \small{\texttt{The research leading to these results has received funding from the European Research Council under the European Union's Seventh Framework Programme (FP7/2007-2013) / ERC grant agreement n°~258803.}}
